Complaint with the requested changes